= Version History =

x.x:

- changed: activity filter menu now remembers the (sub)type filter
- removed: tidypics album view, is already in the pleio branch of TidyPics

2.1.1 (2013-05-06):

- fixed: PHP errors on old function for videolist dimensions
- fixed: PHP error in pages history annotation
- fixed: invalid function call in Tidypics ablum view
- fixed: wrong extend for uservalidationbyemail
- fixed: custom message for group forum discussions reply

2.1 (2013-04-05):

- changed: made compatible with Elgg 1.8.14

2.0 (2012-07-12):

- added: support for videolist widget
- fixed: admin newest users widget

2.0 beta(2012-05-14)

- first release for Elgg 1.8