@@ -1,0 +1,8 @@
+<?php 
+/**
+ * All helper functions ar bundled here
+ */
+
+function elgg_modifications_row_to_guid($row) {
+	return (int) $row->guid;
+}
